--- a/peliculas/src/index.css
+++ b/peliculas/src/index.css
@@ -1,68 +1,1 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+@import"https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap";*{padding:0;margin:0;box-sizing:border-box;font-family:"Poppins",sans-serif;color:#eee}body{background-color:#0a0a0a}h1,.title{text-align:center;color:#eee}header{padding:1rem 0px}.context-movie-card{margin:auto;width:95%;display:grid;grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));gap:1rem}.movie-card{width:100%;transition:all .3s ease-in-out;list-style:none;position:relative;background-color:#111}.movie-card:hover{opacity:.7;transform:scale(1.05) translateY(-8px);transition:.5s}.movie-card-cont{text-decoration:none;display:flex;flex-direction:column;justify-content:space-between;align-items:center}.movie-card-img{width:100%;height:100%}.movie-card-img img{width:100%}.movie-card-title{padding:2px 5px;font-size:12px}.rs-progress-circle{border-radius:100%;background-color:#fff;position:absolute;top:0;width:25%;display:flex;align-items:center;justify-content:center}.rs-progress-circle .rs-progress-circle-info{position:absolute;font-size:.8rem}.rs-progress-circle .rs-progress-circle-info span{color:#000;font-weight:800}.moviedetails{display:flex;margin:auto;width:80%;justify-content:center;align-items:center;gap:2rem}.moviedetails-carucel{height:400px}.moviedetails-carucel img{border-radius:1rem;height:100%}.moviedetails-info{display:flex;flex-direction:column;width:50%;gap:1rem}.moviedetails-info ul li{list-style:none}@media(max-width: 768px){.moviedetails{flex-direction:column;gap:1rem}.moviedetails-carucel{height:300px}.moviedetails-info{width:100%}}
