--- a/1-peliculas/src/index.css
+++ b/1-peliculas/src/index.css
@@ -1,1 +1,41 @@
-@import"https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap";*{padding:0;margin:0;box-sizing:border-box;font-family:"Poppins",sans-serif;color:#eee}body{background-color:#0a0a0a}h1,.title{text-align:center;color:#eee}header{padding:1rem 0px}.context-movie-card{margin:auto;width:95%;display:grid;grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));gap:1rem}.movie-card{width:100%;transition:all .3s ease-in-out;list-style:none;position:relative;background-color:#111}.movie-card:hover{opacity:.7;transform:scale(1.05) translateY(-8px);transition:.5s}.movie-card-cont{text-decoration:none;display:flex;flex-direction:column;justify-content:space-between;align-items:center}.movie-card-img{width:100%;height:100%}.movie-card-img img{width:100%}.movie-card-title{padding:2px 5px;font-size:12px}.rs-progress-circle{border-radius:100%;background-color:#fff;position:absolute;top:0;width:25%;display:flex;align-items:center;justify-content:center}.rs-progress-circle .rs-progress-circle-info{position:absolute;font-size:.8rem}.rs-progress-circle .rs-progress-circle-info span{color:#000;font-weight:800}.moviedetails{display:flex;margin:auto;width:80%;justify-content:center;align-items:center;gap:2rem}.moviedetails-carucel{height:400px}.moviedetails-carucel img{border-radius:1rem;height:100%}.moviedetails-info{display:flex;flex-direction:column;width:50%;gap:1rem}.moviedetails-info ul li{list-style:none}@media(max-width: 768px){.moviedetails{flex-direction:column;gap:1rem}.moviedetails-carucel{height:300px}.moviedetails-info{width:100%}}
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap";
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  color: #eee;
+}
+
+body {
+  background-color: rgb(10, 10, 10);
+}
+h1,
+.title {
+  text-align: center;
+  color: #eee;
+}
+header {
+  padding: 1rem 0px;
+}
+
+.rs-progress-circle {
+  border-radius: 100%;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  top: 0;
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rs-progress-circle .rs-progress-circle-info {
+  position: absolute;
+  font-size: 0.8rem;
+}
+.rs-progress-circle .rs-progress-circle-info span {
+  color: #000;
+  font-weight: 800;
+}
