--- a/3-weblogin/src/components/login/Login.scss
+++ b/3-weblogin/src/components/login/Login.scss
@@ -1,11 +1,12 @@
-$white: rgba(255, 255, 255, 0.3);
 form {
+  margin: auto;
+  width: max-content;
   height: max-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: $white;
+  background: rgba(0, 0, 0, 0.153);
   padding: 1rem 2rem;
   border-radius: 3rem;
   backdrop-filter: blur(10px);
@@ -33,6 +34,11 @@ form {
   }
 
   .myinput {
+    &::placeholder {
+      font-weight: 400;
+      color: #fff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+    }
     &[type="email"],
     &[type="password"] {
       margin-top: 0.8rem;
@@ -47,12 +53,6 @@ form {
     padding: 1rem 4rem;
     margin-top: 1.5rem;
   }
-}
-
-::placeholder {
-  font-weight: 400;
-  color: #fff;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 a,
