--- a/3-weblogin/src/index.scss
+++ b/3-weblogin/src/index.scss
@@ -6,12 +6,14 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background: url("https://i.pinimg.com/564x/1d/7f/f4/1d7ff47b079b4af246f9f0788262e3a4.jpg")
-    no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  background-color: #101827;
+}
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 * .mybtn {
@@ -28,7 +30,7 @@ body {
   }
 }
 
-*.myinput {
+* .myinput {
   background: transparent;
   width: 250px;
   padding: 1rem 1.5rem;
@@ -42,19 +44,51 @@ body {
   font-weight: 500;
   transition: all 0.2s ease-in-out;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  // &:-webkit-autofill,
+  // &:-webkit-autofill:hover,
+  // &:-webkit-autofill:focus {
+  //   -webkit-box-shadow: 0 0 0px 1000px #0b111c inset;
+  //   -webkit-text-fill-color: #ffffff;
+  // }
+  // &:-webkit-autofill:focus {
+  //   -webkit-text-fill-color: #080808;
+  // }
 
   &:hover {
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 4px 4px 60px 8px rgba(0, 0, 0, 0.2);
   }
 }
-/*COMPONENTS*/
-// @import "./components/Navbar/Navbar.scss";
-@import "./components/login/Login";
-@import "./components/signup/Signup";
 
-/*PAGES*/
-@import "./pages/Home";
-// @import "";
-// @import "";
-// @import "";
+* .typing {
+  display: inline-block;
+  width: 0.8rem;
+  height: 0.8rem;
+  margin-right: 0rem;
+  box-sizing: border-box;
+  background: #ccc;
+  border-radius: 50%;
+
+  &.typing-1 {
+    animation: typing 3s infinite;
+  }
+  &.typing-2 {
+    animation: typing 3s 250ms infinite;
+  }
+  &.typing-3 {
+    animation: typing 3s 500ms infinite;
+  }
+}
+@keyframes typing {
+  0%,
+  75%,
+  100% {
+    transform: translate(0, 0.25rem) scale(0.9);
+    opacity: 0.5;
+  }
+
+  25% {
+    transform: translate(0, -0.25rem) scale(1);
+    opacity: 1;
+  }
+}
